--- a/index.html
+++ b/index.html
@@ -47,21 +47,22 @@
       closeBtn = document.querySelector(".close-btn"),
       countdown = document.getElementById("countdown");
 
-    showBtn.addEventListener("click", () => {
-      section.classList.add("active");
-      startCountdown();
-    });
+showBtn.addEventListener("click", () => {
+  section.classList.add("active");
+  startCountdown();
+});
 
-    overlay.addEventListener("click", () =>
-      section.classList.remove("active")
-    );
+overlay.addEventListener("click", () =>
+  section.classList.remove("active")
+);
 
-    closeBtn.addEventListener("click", () =>
-      section.classList.remove("active")
-    );
+closeBtn.addEventListener("click", () =>
+  section.classList.remove("active")
+);
 
-    function startCountdown() {
-  let targetDateString = localStorage.getItem("countdownTarget");
+function startCountdown() {
+  let targetDateString = getCookie("countdownTarget"); // Mengambil waktu target dari cookie
+
   let targetDate;
 
   if (targetDateString) {
@@ -72,8 +73,8 @@
     targetDate.setHours(targetDate.getHours() + 1); // Tambahkan 1 jam dari waktu sekarang
     targetDate.setDate(targetDate.getDate() + 1); // Tambahkan 1 hari dari tanggal sekarang
 
-    // Simpan waktu target ke localStorage untuk digunakan di masa depan
-    localStorage.setItem("countdownTarget", targetDate.toISOString());
+    // Simpan waktu target ke cookie untuk digunakan di masa depan
+    setCookie("countdownTarget", targetDate.toISOString(), 365); // Cookie akan berlaku selama 365 hari
   }
 
   const countdownInterval = setInterval(() => {
@@ -92,11 +93,42 @@
       clearInterval(countdownInterval);
       window.location.href = "https://example.com"; // Ganti URL dengan URL yang diinginkan
 
-      // Hapus waktu target dari localStorage setelah timer selesai
-      localStorage.removeItem("countdownTarget");
+      // Hapus waktu target dari cookie setelah timer selesai
+      deleteCookie("countdownTarget");
     }
   }, 1000);
 }
+
+// Fungsi untuk mengatur cookie
+function setCookie(name, value, days) {
+  const date = new Date();
+  date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+  const expires = "expires=" + date.toUTCString();
+  document.cookie = name + "=" + value + ";" + expires + ";path=/";
+}
+
+// Fungsi untuk mendapatkan nilai cookie
+function getCookie(name) {
+  const cookieName = name + "=";
+  const decodedCookie = decodeURIComponent(document.cookie);
+  const cookieArray = decodedCookie.split(';');
+  for(let i = 0; i < cookieArray.length; i++) {
+    let cookie = cookieArray[i];
+    while (cookie.charAt(0) == ' ') {
+      cookie = cookie.substring(1);
+    }
+    if (cookie.indexOf(cookieName) == 0) {
+      return cookie.substring(cookieName.length, cookie.length);
+    }
+  }
+  return "";
+}
+
+// Fungsi untuk menghapus cookie
+function deleteCookie(name) {
+  document.cookie = name + '=; Max-Age=-99999999;';
+}
+
 
 
   </script>
