--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <img src="SK .jpeg" alt="" style="width: 1000x; height: 1050px;">
   
   <section>
-    <button class="show-modal">Klik disini untuk melihat Hasil Kelulusan SMAN BERNAS BINSUS Provinsi Riau</button>
+    <button class="show-modal">Klik disini untuk melihat Hasil Kelulusan SMAN BERNAS BINSUS Provinsi Riau 2024</button>
     <span class="overlay"></span>
 
     <div class="modal-box">
