--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <i class="fa-regular fa-circle-check"></i>
       <h2>SMAN BERNAS BINSUS </h2>
       <h2>PROVINSI RIAU</h2>
-      <h3>Kamu akan melihat hasil dari kelulusan SMAN BERNAS BINSUS dalam waktu hitungan mundur.</h3>
+      <h3>Kamu akan melihat hasil dari kelulusan SMAN BERNAS BINSUS dalam waktu hitungan mundur (BERDOA).</h3>
 
       <!-- Countdown Timer -->
       <div id="countdown"></div>
