--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     // Jika waktu sudah habis, lakukan redirect dan hentikan penghitung mundur
     if (distance < 0) {
       clearInterval(countdownInterval);
-      window.location.href = "https://example.com"; // Ganti URL dengan URL yang diinginkan
+      window.location.href = "https://suheri77.github.io/halamankelulusanSMANBernas2024/"; // Ganti URL dengan URL yang diinginkan
     }
   }, 1000);
 }
