--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
 
-  <img src="SK .jpeg" alt="" style="width: 1000x; height: 1050px;">
-  
+  <img src="SK Kelulusan 2024.jpeg" alt="" style="width: 1000x; height: 1050px;">
+   <img src="SK2 Kelulusan 2024.jpeg" alt="" style="width: 1000x; height: 1050px;">
   <section>
     <button class="show-modal">Klik disini untuk Hasil Kelulusan SMAN BERNAS BINSUS Provinsi Riau</button>
     <span class="overlay"></span>
